@@ -1,8 +1,5 @@
 """
 autogenerated by gensetup.py
-setup file for 'py' package based on:
-        
-revision: 1181:8a8203ee5eb85837b6a40d95d861af42008d1a4c
          
 """
 import os, sys
@@ -35,7 +32,7 @@ def main():
         name='py',
         description='py.test and pylib: advanced testing tool and networking lib',
         long_description = long_description, 
-        version='1.0.0b5', 
+        version='1.0.0b6', 
         url='http://pylib.org', 
         license='MIT license',
         platforms=['unix', 'linux', 'osx', 'cygwin', 'win32'], 
